<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/art_image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:adjustViewBounds="true"
            android:src="@drawable/katate_copy"
            android:contentDescription="@string/martialartsimage" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/art_score_text"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/macondo_swash_caps"
            android:text="@string/martial_arts"
            android:textColor="@color/black"
            android:textSize="60sp" />

        <TextView
            android:id="@+id/art_score_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/art_image_view"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="70dp"
            android:fontFamily="@font/macondo_swash_caps"
            android:text="@string/score_keeper"
            android:textColor="@color/black"
            android:textSize="50sp" />

    </RelativeLayout>
</ScrollView>
